Search for Venue by city
Use some ARel trickery for a database-agnostic case-insensitive search.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,5 @@ en:
       search: Search!
       query_label: Search
       query_placeholder: Enter a city
+    search:
+      page_title: "Search results for '%{query}'"
